--- a/test.html
+++ b/test.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="CashRegister.js"></script>
+    <script src="RomanNumerals.js"></script>
   </body>
 </html>
