--- a/data-visualisation/bar-chart/index.html
+++ b/data-visualisation/bar-chart/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>D3 | Bar Chart</title>
 </head>
 <body>
+
+    <div class="bar-chart">
+
+    </div>
     
-    <script defer src="https://d3js.org/d3.v5.min.js"></script>
+    <!-- <script defer src="https://d3js.org/d3.v5.min.js"></script> -->
+    <script defer src="d3.js"></script>
     <script defer src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <script defer src="main.js"></script>
 </body>
 </html>
